--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.9",
+    "expo-av": "~12.0.4",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-root-toast": "^3.4.0",
     "react-native-sound": "^0.11.2",
     "react-native-sound-player": "^0.13.2",
+    "react-native-super-grid": "^4.6.1",
     "react-native-track-player": "^3.2.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-av": "~12.0.4"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
