--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-sound-player": "^0.13.2",
     "react-native-super-grid": "^4.6.1",
     "react-native-track-player": "^3.2.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-barcode-scanner": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
