--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-super-grid": "^4.6.1",
     "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0",
-    "expo-barcode-scanner": "~11.4.0"
+    "expo-barcode-scanner": "~11.4.0",
+    "expo-notifications": "~0.16.1",
+    "expo-device": "~4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
